--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-shape": "^3.2.0",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
